--- a/Control Step Motor Base On LabVIEW/Description
+++ b/Control Step Motor Base On LabVIEW/Description
@@ -1,1 +1,3 @@
-
+大二时候写的基于LabVIEW的步进电机控制程序，中间有做过说明文档，在后续的时候又做了相关的补充说明。
+这是第一次用Labview做串口的字符串解析，以前都是做虚拟的串口发送和读写来测试数据，使用的框架为生产消费。
+PS：感谢Lv学长在程序完成时提供的帮助！
